--- a/index.html
+++ b/index.html
@@ -23,41 +23,39 @@
       <a href="#contacts">CONTACTS</a>
     </div>
   </nav>
-
   <section id="home">
-    <a href="#"><h1>PORTFOLIO</h1></a>
+    <a href="#"><h1>Welcome To My Portfolio</h1></a>
     <!-- <img src="https://media.tenor.com/xo0jvr4bbTMAAAAj/rick-astley-rickroll.gif" alt=""> -->
   </section>
 
   <section id="about">
     <div class="about">
-      <img src="./img/rick-roll.gif" alt="Rick Astley Image" id="rickrolls_img">
-      <!-- https://i.insider.com/602ee9d81a89f20019a377c6?width=1136&format=jpeg -->
+      <img src="https://cdn.discordapp.com/attachments/709055191403724884/1138114841823953066/152_20230807212155.png" alt="Chayanin" >
       <p>
-        I love logan.<br>I mastered <a href="https://www.youtube.com/watch?v=tB48sKGi5ag" target=" " id="song"><h4>Put your hand in mineee</h4></a>
+        Chayanin
       </p>
     </div>
   </section>
 
   <section id="skills">
-    <h2>Section 3</h2>
-    <p>This is the content of section 3.</p>
+    <h2>My Skills</h2>
+    <p>1. ทักษะทางฟิสิกส์และภาษาอังกฤษ<br>2. ทักษะการนำเสนองาน การตัดต่อการเขียนโครงงาน การสร้างโปสเตอร์ และศิลปะ<br>3. ทักษะการเป็นได้ทั้งผู้นำ และผู้ตามที่ดี <br>4. ทักษะการวางแผน บริหารจัดการเวลา และการแก้ปัญหา</p>
   </section>
 
   <section id="education">
-    <h2>Section 4</h2>
-    <p>This is the content of section 3.</p>
+    <h2>My Education</h2>
+    <p>มัธยมศึกษาปีที่ 6 โรงเรียนเตรียมอุดมศึกษาพัฒนาการสุวรรณภูมิ สายการเรียนวิทย์-คณิต เกรดเฉลี่ย3.78</p>
   </section>
 
   <section id="contacts">
-    <h2>Section 5</h2>
-    <p>This is the content of section 3.</p>
+    <h2>Contact Me</h2>
+    <p>email : meena.0971137389@gmail.com  /  IG : m_meenaaii  /  FB : Meenaa Meena  /  id line : ...anime555  /  Phone : 0826538513</p>
   </section>
 
   <script src="app.js"></script>
 
   <footer>
-    <p>&copy; 2023 Love from meen. All rights reserved.</p>
+    <p>&copy; 2023 Chayanin. All rights reserved.</p>
   </footer>
 
 </body>
