--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section id="about">
     <div class="about">
-      <img src="https://cdn.discordapp.com/attachments/709055191403724884/1138114841823953066/152_20230807212155.png" alt="Chayanin" >
+      <img src="https://media.discordapp.net/attachments/709055191403724884/1142787239059918918/152_20230820184759.png?width=688&height=473" alt="Chayanin" >
       <p>
         Chayanin
       </p>
